--- a/manifests/ratings_sa.yaml
+++ b/manifests/ratings_sa.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: bookinfo-productpage
+  name: bookinfo-ratings
   labels:
-    account: productpage
+    account: ratings
